--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <table cellspacing="20">
     <tr>
-      <td><img src="D:\himanshu\Web D\Atom\HTML - Personal Site\HTML - Personal Site\1633112011620.jpg" alt="HK" height="250" width="200"></td>
+      <td><img src="https://github.com/HIMANSHU-K-SINGH/CV/blob/main/1633112011620.jpg" alt="HK" height="250" width="200"></td>
       <td><h1> HIMANSHU KUMAR </h1>
       <p><em>Student at <strong><a href="https://www.iitism.ac.in/">IIT (ISM), Dhanbad</a></strong></em></p>
       <p>I am pursuing Bachelor of Technology in Petroleum Engineering. <br>I am from Ranchi, Jharkhand. <br>My hobby is mobile photography.</p></td>
