--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </center>
 
   <hr size="3" noshade>
-  <h3><a href="D:\himanshu\Web D\Atom\HTML - Personal Site\HTML - Personal Site\contact.html">CONTACT ME</a></h3>
+  <h3><a href="contact.html">CONTACT ME</a></h3>
 
 </body>
 
